--- a/web/views/main/main.html
+++ b/web/views/main/main.html
@@ -46,6 +46,164 @@
 
 </div>
 
+<div class="row form-group">
+	<div class="col-lg-12">
+	<div class="page-header text-center">
+		<h3>ภาพกิจกรรม</h3>
+	</div>
+	<div class="row form-group">
+		<div class="col-lg-3">
+			<div class="input-group add-on pull-right">
+                <input type="text" class="form-control" placeholder="ค้นหาภาพกิจกรรม" name="srch-term" id="srch-term" ng-model="keyword" ng-keyup="checkEnter($event, keyword)" style="height: 34px;">
+                <div class="input-group-btn">
+                    <button class="btn btn-default bg-orange" ng-click="goSearch(keyword)"><i class="glyphicon glyphicon-search"></i></button>
+                </div>
+            </div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-lg-3">
+			<div class="row form-group">
+				<div class="col-lg-12 text-center">
+					<img src="../files/img/news/20180903204340_920025.jpg" style="height: 200px;">
+				</div>
+			</div>
+			<div class="row form-group">
+				<div class="col-lg-12">
+					กิจกรรม 1
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-3">
+			<div class="row form-group">
+				<div class="col-lg-12 text-center">
+					<img src="../files/img/news/20180903204340_920025.jpg" style="height: 200px;">
+				</div>
+			</div>
+			<div class="row form-group">
+				<div class="col-lg-12">
+					กิจกรรม 2
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-3">
+			<div class="row form-group">
+				<div class="col-lg-12 text-center">
+					<img src="../files/img/news/20180903204340_920025.jpg" style="height: 200px;">
+				</div>
+			</div>
+			<div class="row form-group">
+				<div class="col-lg-12">
+					กิจกรรม 3
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-3">
+			<div class="row form-group">
+				<div class="col-lg-12 text-center">
+					<img src="../files/img/news/20180903204340_920025.jpg" style="height: 200px;">
+				</div>
+			</div>
+			<div class="row form-group">
+				<div class="col-lg-12">
+					กิจกรรม 4
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-lg-12">
+			<span class="pull-right"><a href="#/gallery">ดูทั้งหมด</a></span>
+		</div>
+	</div>
+</div>
+</div>
+
+<div class="row form-group">
+	<div class="col-lg-5">
+		<div class="panel panel-info">
+			<div class="panel-heading">
+				<h4>ปฏิทิน</h4>
+			</div>
+			<div class="panel-body">
+				<div class="calendar-header">
+				    <div class="row form-group" class="calendar-month" style="">
+				      <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" ng-click="goToLastMonth()" style="text-align: center; vertical-align: middle; font-size: 2.5em;cursor: pointer;">
+				      		<
+				      </div>
+				      <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+				      	<div class="row">
+				      		<!--<div class="col-lg-4" style="text-align: center; vertical-align: middle; padding-top: 7px;">
+						      	<span style="font-weight: bolder; font-size: 1.5em; top: 7px;">{{currentDate}}</span>
+						      	
+						    </div>-->
+				      		<div class="col-lg-12" style="text-align: center; vertical-align: middle; padding-top: 7px;">
+						      	<span style="font-weight: bolder; font-size: 1.5em; top: 7px;">{{currentMonth}}</span>
+						      	<br><span style="font-weight: bolder; font-size: 1em; top: 0px;">{{currentYear + 543}}</span>
+						      	<br>
+						    </div>
+						    
+					      </div>
+					  </div>
+				      <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" ng-click="goToNextMonth()" style="text-align: center; vertical-align: middle;  font-size: 2.5em;cursor: pointer;">
+				      	>
+				      </div>
+				    </div>
+				  </div>
+				  <div class="calendar-body">
+				    <div style="text-align: center;">
+				      <div class="row" class="calendar-weekday">
+				        <div style="float:left; width: 14.28%; border: 0.5px #ccc solid; padding: 10px;"><span style="color:#C32E09;">SUN</span></div>
+				        <div style="float:left; width: 14.28%; border: 0.5px #ccc solid; padding: 10px;">MON</div>
+				        <div style="float:left; width: 14.28%; border: 0.5px #ccc solid; padding: 10px;">TUE</div>
+				        <div style="float:left; width: 14.28%; border: 0.5px #ccc solid; padding: 10px;">WED</div>
+				        <div style="float:left; width: 14.28%; border: 0.5px #ccc solid; padding: 10px;">THU</div>
+				        <div style="float:left; width: 14.28%; border: 0.5px #ccc solid; padding: 10px;">FRI</div>
+				        <div style="float:left; width: 14.28%; border: 0.5px #ccc solid; padding: 10px;"><span style="color:#C32E09;">SAT</span></div>
+				      </div>
+				      <div class="row form-group" class="calendar-date">
+				        <div style="float:left; width: 14.28%; border: 0.5px #ccc solid; padding: 7px; color: #ccc; height: 60px;" ng-repeat="lastDay in daysInLastMonth" class="last-month" style="border-bottom: 0.1em solid #ccc; padding-top: 15px; padding-bottom: 15px;" >{{lastDay}}</div>
+				        <div style="float:left; width: 14.28%; border: 0.5px #ccc solid; padding: 7px; height: 60px;" ng-repeat="day in daysInThisMonth" style="border-bottom: 0.1em solid #ccc; padding-top: 15px; padding-bottom: 15px;">
+				          <!--<span class="currentDate" *ngIf="currentDate === day; else otherDate">{{day}}</span>-->
+				          <!--<span class="currentDate" *ngIf="checkEventDate(day); else otherDate">{{day}}</span>-->
+				          <span ng-class="{'currentDate':day == currentDate}">{{day}}</span>
+				          <div ng-repeat="meeting in findMeetingInDay(day)  | limitTo:1" style="font-size: 0.8em; background-color: #619240; color: #FFF; cursor: pointer;" ng-click="setMeetingTable(findMeetingInDay(day), day)">
+				          	<span class="glyphicon glyphicon-zoom-in"></span>
+				          </div>
+				        </div>
+				        <div style="float:left; width: 14.28%; border: 0.5px #ccc solid; padding: 7px; color: #ccc; height: 60px;" ng-repeat="nextDay in daysInNextMonth" class="next-month" style="border-bottom: 0.1em solid #ccc; padding-top: 15px; padding-bottom: 15px;">{{nextDay}}</div>
+				      </div>
+				    </div>
+				  </div>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-7">
+		<table class="table table-striped table-bordered">
+			<caption class="text-center" style="background-color: #d9edf7;">
+				<h4><b>{{CurrentDay}}</b></h4>
+			</caption>
+			<thead>
+				<tr>
+					<th>หัวข้อการประชุม</th>
+					<th>เวลาเริ่มต้น / สิ้นสุด</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="data in MeetingList">
+					<td><a ng-click="showMeetingDetail(data)" style="cursor: pointer;">{{data.meetingName}}</a></td>
+					<td>
+    					{{makeDateTimeString(data.startDate)}} ถึง {{makeDateTimeString(data.endDate)}}
+    				</td>
+				</tr>
+				<tr>
+					<td colspan="2" ng-show="MeetingList.length == 0" class="text-center">ไม่มีการประชุมในวันนี้</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
+
 <div class="row" style="background-color: #48A3D8;">
     <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1" style="color: #FFF; padding-top:10px; padding-bottom: 10px;">
       	<span style="font-size: 1.8em; color: #FFF;">{{DEFAULT_LANGUAGE == 'TH'?'ลงทะเบียน':'Register'}}</span> <span style="font-size: 1.4em;color: #FFF">
