--- a/backend/views/main.html
+++ b/backend/views/main.html
@@ -48,7 +48,8 @@
 				        dnd-moved="main_content_list.splice($index, 1)"
 				        dnd-effect-allowed="move"
 				        dnd-selected="model.selected = data" 
-				        dnd-dragend="dropCallback(main_content_list)" bind-html-compile="data.contents">
+				        dnd-dragend="dropCallback(main_content_list)" 
+                                        bind-html-compile="data.contents">
 			
 		</li>
 	</ul>
